MaryiaF/fix: Balance loader, platform switcher, labels reports and cashier aren't aligned on Firefox

--- a/static/css/deriv/header.scss
+++ b/static/css/deriv/header.scss
@@ -57,6 +57,7 @@
 
             > * {
                 display: inline-flex;
+                flex: 1;
             }
         }
         &-item {
@@ -86,6 +87,7 @@
                 text-transform: capitalize;
                 padding: 0 8px;
                 word-wrap: break-word;
+                align-items: center;
                 @include mobile{
                     width:100%;
                     justify-content: space-between;
@@ -117,12 +119,14 @@
             }
         }
         &-right{
+            justify-content: flex-end;
             > * {
                 align-self: center;
             }
             &-loader{
                 width: 100%;
                 height: 100%;
+                text-align: right;
                 & > svg{
                     max-height: 80%;
                     margin-right:10px;
